# softtsc

./: CMakeLists.txt
cmake/: FindPulseAudio.cmake  SOURCES.txt
include/: mskmodem.h  sound.h
module/: CMakeLists.txt  channel.c  channel.h  channel.py  module.c  mpt1327.py  mpt1343.py  tsc.py
mskmodem/: CMakeLists.txt  mskmodem.c  sound_jack.c  sound_pulse.c
